crates/vize_atelier_vapor/src/snapshots/vize_atelier_vapor__tests__compile_bare_default_slot_outlet.snap
---
source: crates/vize_atelier_vapor/src/tests.rs
expression: code.as_str()
---
import { createSlot as _createSlot } from 'vue';
export function render(_ctx) {
const n0 = _createSlot()
return n0
}
