crates/vize_atelier_vapor/src/snapshots/vize_atelier_vapor__tests__compile_branch_component_under_existing_parent.snap
---
source: crates/vize_atelier_vapor/src/tests.rs
expression: code.as_str()
---
import { resolveComponent as _resolveComponent, createComponentWithFallback as _createComponentWithFallback, setInsertionState as _setInsertionState, createIf as _createIf, template as _template } from 'vue';
const t0 = _template("<main></main>", true)
export function render(_ctx) {
const n0 = t0()
_setInsertionState(n0)
const n1 = _createIf(() => (_ctx.ok), () => {
const _component_MyComp = _resolveComponent("MyComp")
const n3 = _createComponentWithFallback(_component_MyComp, null, null, false)
return n3
})
return n0
}
