crates/vize_atelier_vapor/src/snapshots/vize_atelier_vapor__tests__compile_component_props_are_getters.snap
---
source: crates/vize_atelier_vapor/src/tests.rs
expression: code.as_str()
---
import { resolveComponent as _resolveComponent, createComponentWithFallback as _createComponentWithFallback, template as _template } from 'vue';
const t0 = _template("about")
export function render(_ctx) {
const _component_NuxtLink = _resolveComponent("NuxtLink")
const n1 = _createComponentWithFallback(_component_NuxtLink, {
to: () => (_ctx.to),
target: () => ("_blank"),
onClick: () => (_ctx.onClick)
}, {
"default": () => {
const n0 = t0()
return n0
}
}, true)
return n1
}
