crates/vize_atelier_vapor/src/snapshots/vize_atelier_vapor__tests__compile_component_resolution_is_scoped_per_branch.snap
---
source: crates/vize_atelier_vapor/src/tests.rs
expression: code.as_str()
---
import { resolveComponent as _resolveComponent, createComponentWithFallback as _createComponentWithFallback, setInsertionState as _setInsertionState, createIf as _createIf, template as _template } from 'vue';
const t0 = _template("<div></div>", true)
export function render(_ctx) {
const n0 = t0()
_setInsertionState(n0)
const n1 = _createIf(() => (_ctx.first), () => {
const _component_CodeHighlight = _resolveComponent("CodeHighlight")
const n3 = _createComponentWithFallback(_component_CodeHighlight, null, null, false)
return n3
}, () => _createIf(() => (_ctx.second), () => {
const _component_CodeHighlight = _resolveComponent("CodeHighlight")
const n5 = _createComponentWithFallback(_component_CodeHighlight, null, null, false)
return n5
}, () => {
const _component_CodeHighlight = _resolveComponent("CodeHighlight")
const n8 = _createComponentWithFallback(_component_CodeHighlight, null, null, false)
return n8
}))
return n0
}
