crates/vize_atelier_vapor/src/snapshots/vize_atelier_vapor__tests__compile_component_v_model_uses_update_listener_getter.snap
---
source: crates/vize_atelier_vapor/src/lib.rs
expression: code.as_str()
---
import { resolveComponent as _resolveComponent, createComponentWithFallback as _createComponentWithFallback } from 'vue';
export function render(_ctx) {
const _component_InputBase = _resolveComponent("InputBase")
const n0 = _createComponentWithFallback(_component_InputBase, {
modelValue: () => (_ctx.searchQuery),
"onUpdate:modelValue": () => ($event => ((_ctx.searchQuery) = $event))
}, null, true)
return n0
}
