crates/vize_atelier_vapor/src/snapshots/vize_atelier_vapor__tests__compile_control_flow_uses_parent_specific_insertion_state.snap
---
source: crates/vize_atelier_vapor/src/tests.rs
expression: code.as_str()
---
import { resolveComponent as _resolveComponent, createComponentWithFallback as _createComponentWithFallback, child as _child, next as _next, setInsertionState as _setInsertionState, createIf as _createIf, template as _template } from 'vue';
const t0 = _template("<span>a</span>", true)
const t1 = _template("<div><button></button><main></main></div>", true)
export function render(_ctx) {
const n0 = t1()
const n1 = _child(n0)
const n5 = _next(n1)
_setInsertionState(n1)
const n2 = _createIf(() => (_ctx.dark), () => {
const n4 = t0()
return n4
})
_setInsertionState(n5)
const n6 = _createIf(() => (_ctx.tab), () => {
const _component_MyComp = _resolveComponent("MyComp")
const n8 = _createComponentWithFallback(_component_MyComp, null, null, false)
return n8
})
return n0
}
