crates/vize_atelier_vapor/src/snapshots/vize_atelier_vapor__tests__compile_custom_directive_preserves_payloads.snap
---
source: crates/vize_atelier_vapor/src/tests.rs
expression: code.as_str()
---
import { resolveDirective as _resolveDirective, withVaporDirectives as _withVaporDirectives, template as _template } from 'vue';
const t0 = _template("<div></div>", true)
export function render(_ctx) {
const _directive_focus = _resolveDirective("focus")
const n0 = t0()
_withVaporDirectives(n0, [[_directive_focus, () => (_ctx.handler), () => (_ctx.placement), { "lazy": true }]])
return n0
}
